# se-toolkit-lab-8

./: AGENTS.md  REPORT.md  docker-compose.yml  pyproject.toml
.agents/skills/ideate-lab/: SKILL.md
.agents/skills/review-file/: SKILL.md
.qwen/: settings.json  settings.json.orig
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
contributing/conventions/writing/: lab-plan.md
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: export-openapi.py
wiki/: dotenv-docker-secret.md  llm.md  vm.md
