[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability (VictoriaLogs and VictoriaTraces)"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "mcp",
    "httpx",
    "opentelemetry-distro[otlp]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]

[project.scripts]
mcp-obs = "mcp_obs.server:main"
